--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Fiction'
 - !lcc 'PS'
 - !lcsh 'Detective and mystery stories'
+- GITenberg
 title: 'The Last Stroke: A Detective Story'
 url: http://www.gutenberg.org/ebooks/35304
